# gigaphone

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  biome.json  package-lock.json  package.json  progress.json  pyproject.toml  tsconfig.json
.agents/skills/gigaphone/: SKILL.md
.agents/skills/gigaphone/agents/: openai.yaml
.agents/skills/gigaphone/references/: protocols.md
.claude/commands/: own-through-merge.md
.github/workflows/: ci.yml
adapters/backend/: README.md
adapters/harness/: README.md
adapters/harness/claude_code/: README.md
adapters/harness/codex/: hooks.json  plugin.toml
assets/runtime/python/gigaphone/: __init__.py
assets/runtime/typescript/: gigaphone-core.d.ts  gigaphone-core.mjs  package.template.json
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  PUBLISHING.md  golden-principles.md
docs/adr/: 0001-record-architecture-decisions.md  0002-neutral-core-four-axes.md  0003-trace-the-consumption-boundary.md  0004-discovery-produces-committed-config.md  0005-no-coverage-without-verification.md  0006-harness-is-the-reasoning-engine.md  0007-python-pack-uses-stdlib-ast.md  0008-agent-call-boundary.md  0009-bidirectional-harness-review.md  0010-codebase-adapter-axis.md
docs/specs/: 2026-06-26-agent-call-binding-resolution.md  2026-06-26-agent-call-boundary-design.md  2026-06-26-native-instrumentation-emission.md  agent-call-why-it-breaks.html
docs/superpowers/plans/: 2026-06-26-agent-call-boundary.md  2026-06-26-binding-resolution.md
docs/superpowers/specs/: 2026-06-25-end-to-end-llm-and-tool-trace-verification-design.md  2026-07-02-runtime-fidelity-eval-design.md
examples/: gigaphone.boundaries.yaml
hooks/: hooks.json
packs/: README.md
runtime/typescript/: README.md
scripts/: build-plugins.ts  build_plugins.py  copy-assets.mjs
skills/gigaphone/: SKILL.md
src/: cli.ts  index.ts
src/adapters/backend/: braintrust.ts  index.ts  langsmith.ts  logfire.ts  phoenix.ts  registry.ts
src/adapters/backend/otel/: adapter.ts
src/adapters/codebase/: index.ts  registry.ts  scaffold.ts
src/adapters/codebase/examples/: hermes.ts  openhands.ts
src/adapters/harness/: claudeCode.ts  codex.ts  index.ts  manifest.ts  packaging.ts  registry.ts
src/config/: config.ts  yaml.ts
src/core/: boundary.ts  planRecord.ts  sourceMap.ts
src/engine/: detect.ts  discover.ts  index.ts  plan.ts  project.ts  resolve.ts  review.ts  verify.ts
src/gigaphone/: __init__.py  _yaml.py  cli.py  config.py
src/gigaphone/adapters/: registry.py
src/gigaphone/adapters/harness/: manifest.py  packaging.py
src/gigaphone/core/: __init__.py  boundary.py  model.py  plan_record.py
src/gigaphone/engine/: fix.py  plan.py  report.py  review.py  verify.py
src/gigaphone/interfaces/: __init__.py  backend_adapter.py  harness_adapter.py  language_pack.py
src/gigaphone/packs/: registry.py
src/gigaphone/packs/python/: agent_sdks.py  pack.py
src/gigaphone/packs/rust/: __init__.py  pack.py
src/gigaphone/packs/typescript/: _treesitter.py  pack.py
src/gigaphone/runtime/: logfire.py  otel.py
src/interfaces/: backendAdapter.ts  codebaseAdapter.ts  harnessAdapter.ts  index.ts  languagePack.ts
src/packs/: registry.ts
src/packs/python/: agentSdks.ts  ast.ts  astDump.py  index.ts  pack.ts
src/packs/rust/: index.ts
src/packs/typescript/: index.ts  pack.ts
testclient-ts/: README.md
testclient-ts/app/: agent.ts  run_representative.ts  tools.ts
testclient/agent_wrapper/agents/: __init__.py
testclient/agent_wrapper/harness/: run_representative.py  service.py  tracing.py
testclient/app/: agent.py  gateway.py
tests/: codebaseAdapter.test.ts  e2ePythonOnboarding.test.ts  e2eTypescriptOnboarding.test.ts  fix.test.ts  harness.test.ts  nativeBackends.test.ts  planResolve.test.ts  pythonPackAgentCall.test.ts  pythonPackHookBus.test.ts  pythonPackLlm.test.ts  rustPack.test.ts  test_agent_call.py  test_cli_onboard.py  test_docs.py  test_e2e_agent_wrapper.py  test_e2e_onboarding.py  test_e2e_typescript_onboarding.py  test_engine_protocols.py  test_harness.py  test_harness_and_mcp.py  test_llm_classification.py  test_llm_fix.py  test_llm_runtime.py  test_native_emit.py  test_otel_native_backends.py  test_rust_pack.py  test_scaffold.py  test_tree_verify.py  test_typescript_fix_wiring.py  test_typescript_pack.py  test_typescript_treesitter.py  test_zero_dependency.py  typescriptPack.test.ts
ts/src/: cli.ts
ts/src/adapters/harness/: claudeCode.ts  codex.ts  (+1 more)
ts/src/core/: model.ts
ts/src/engine/: fix.ts  report.ts
ts/tests/: architecture.test.ts  docs.test.ts  e2ePythonOnboarding.test.ts  e2eTypescriptOnboarding.test.ts  harness.test.ts  pythonPackLlm.test.ts  typescriptPack.test.ts  typescriptPrecise.test.ts
(+19 files in other folders)
