[project]
name = "gigaphone"
version = "0.4.0"
description = "Trace-coverage instrumentation for AI agent codebases — neutral across harness, language, vendor, and codebase."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Gigaflow" }]
dependencies = [
    # Kept minimal at scaffold stage. Real deps land with their milestone:
    #   tree-sitter + tree-sitter-python/typescript   (M2/M6 language packs)
    #   pyyaml                                          (M1 config loader)
    #   opentelemetry-sdk + openinference-*             (M3 OTel backend adapter)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[project.scripts]
gigaphone = "gigaphone.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gigaphone"]

# Protected: do not relax these to silence errors — fix the code (golden principle 10).
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
